Fix png not visible

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   transition: opacity 1.2s ease-in-out;
 }
 
-.slide img {
+.slide .bg {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -115,7 +115,10 @@ body {
 
   clip-path: inset(0 0 0 50%);
 
-  opacity: 0;
+  opacity: 1 !important;
+  background: red;
+  /*opacity: 0;*/
+  
   z-index: 3; /* ⬅️ sopra overlay e immagine */
 
   transition: transform 0.3s ease;
